--- a/css/style.css
+++ b/css/style.css
@@ -25,21 +25,16 @@ box-sizing: border-box;
 .colum-2{
     float: left;
     width: 45%;
-    padding: 40px;
     padding: 70px;
-    padding-right: 70px;
     height: 475px;
-    margin: 30px;
-    margin-right: 30px;
-    margin-bottom: 70px;
+    margin: 30px 30px 70px 30px;
     background-color: #fede00;
     line-height: 2;
 }
 
 .large-profile{
-    background: url('../images/picme.jpeg');
     background-size: 20%;
-    background-position: center;
+    background: url('../images/picme.jpeg') center;
 }
 
 .section-heading{
@@ -98,88 +93,77 @@ box-sizing: border-box;
 }
 
 .project-2 :hover{
-background-color: #fede00;
+    background-color: #fede00;
 }
 
 .project-3 :hover{
     background-color: #fede00;
-    }
+}
 
-    .project-4 :hover{
-        background-color: #fede00;
-        }
+.project-4 :hover{
+    background-color: #fede00;
+}
 
-        .project-5 :hover{
-            background-color: #fede00;
-            }
+.project-5 :hover{
+    background-color: #fede00;
+}
 
-            .project-6 :hover{
-                background-color: #fede00;
-                }
+.project-6 :hover{
+    background-color: #fede00;
+}
 
-                .project-7 :hover{
-                    background-color: #fede00;
-                    }
+.project-7 :hover{
+    background-color: #fede00;
+}
 
-                    .section-break{
-                        margin: 50px;
-                        height: 500px;
-                    }
+.section-break{
+    margin: 50px;
+    height: 500px;
+}
 
-                    .section-heading{
-                        text-align: center;
-                        color: #102c4e;
-                        margin-top: 150px;
-                        margin-bottom: 70px;
-                        font-size: 35px;
-                    }
+.section-heading{
+    text-align: center;
+    color: #102c4e;
+    margin-top: 150px;
+    margin-bottom: 70px;
+    font-size: 35px;
+}
 
-                    .colum-1 {
-                        width: 90%;
-                        height: auto;
-                        padding-top: 70px;
-                        padding-left: 70px;
-                        padding-bottom: 70px;
-                        margin: auto;
-                        margin-bottom: 50px;
-                        margin-top: 75px;
-                        background-color: white;
-                    }
+.colum-1 {
+    width: 90%;
+    height: auto;
+    padding-top: 70px;
+    padding-left: 70px;
+    padding-bottom: 70px;
+    margin: 75px auto 50px;
+    background-color: white;
+}
 
-                    .table-style {
-                        width: 100%;
-                        border-spacing: 24px;
-                    }
+.table-style {
+    width: 100%;
+    border-spacing: 24px;
+}
 
-                    .colum-2a{
-                        float: left;
-                        width: 45%;
-                        padding: 40px;
-                        padding-left: 70px;
-                        padding-right: 70px;
-                        padding-bottom: 60px;
-                        height: 450px;
-                        margin: 30px;
-                        margin-right: 30px;
-                        margin-bottom: 40px;
-                        background-color: white;
-                    }
+.colum-2a{
+    float: left;
+    width: 45%;
+    padding: 40px 70px 60px;
+    height: 450px;
+    margin: 30px 30px 40px;
+    background-color: white;
+}
 
-                    .colum-quote{
-                        width: 90%;
-                        height: 475px;
-                        padding: 40px;
-                        padding-left: 70px;
-                        padding-right: 70px;
-                        padding-bottom: 100px;
-                        margin: auto;
-                        margin-bottom: 150px;
-                        border: 20px solid goldenrod;
-                    }
+.colum-quote{
+    width: 90%;
+    height: 475px;
+    padding: 40px 70px 100px;
+    margin: auto auto 150px;
+    border: 20px solid goldenrod;
+}
 
-                    .quote{
-                        text-align: center;
-                        font-size: 40px;
-                        font-weight: bold;
-                        line-height: 1;
-                    }
+.quote{
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 1;
+}
